--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "LJDevlin/LJDevlin.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "20231211_115018~2.jpg"
   name             : "Dr Lee Devlin"
   pronouns         : # example: "she/her"  
   bio              : "Lecturer (assistant Professor) in Numerical Bayesian Signal Processing"
