--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "20231211_115018~2.jpg"
   name             : "Dr Lee Devlin"
-  pronouns         : # example: "she/her"  
+  pronouns         : "Ph.D, MPhys, MInstP, FHEA "# example: "she/her"  
   bio              : "Lecturer (assistant Professor) in Numerical Bayesian Signal Processing"
   location         : "Liverpool, UK"
   employer         : "The University of Liverpool"
